# AlVin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  algebraicinteger.cpp  algebraicinteger.h  algebraicinteger_8h.html  algebraicinteger_8h__dep__incl.map  algebraicinteger_8h__dep__incl.md5  algebraicinteger_8h__incl.map  algebraicinteger_8h__incl.md5  algebraicinteger_8h_source.html  alvin.cpp  alvin.h  alvin_8h.html  alvin_8h__dep__incl.map  alvin_8h__dep__incl.md5  alvin_8h__incl.map  alvin_8h__incl.md5  alvin_8h_source.html  alvinfraction.cpp  alvinfraction.h  alvinfraction_8h.html  alvinfraction_8h__dep__incl.map  alvinfraction_8h__dep__incl.md5  alvinfraction_8h__incl.map  alvinfraction_8h__incl.md5  alvinfraction_8h_source.html  alvinfractions.cpp  alvinfractions.h  alvinfractions_8h.html  alvinfractions_8h__dep__incl.map  alvinfractions_8h__dep__incl.md5  alvinfractions_8h__incl.map  alvinfractions_8h__incl.md5  alvinfractions_8h_source.html  annotated.html  app.cpp  app.h  app_8h.html  (+371 more)
lib/: eigen-eigen-da9b4e14c255.tar.bz2  eigen-eigen-f562a193118d.tar.bz2
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  (+6 more)
tools/tests/: CMakeLists.txt  main.cpp  quadratic_forms_tests.in  tests.cpp  tests.h
tools/tests/checked/: 2-[1,0,0],1,1.coxiter  3-[1,0,0],1,1,1.coxiter  4-[1,0,0],1,1,1,1.coxiter
